{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 45,
  "lineage": "de25e6a3-3875-c7cf-f424-22d8adae18a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebAp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009726b835c24a3aa",
            "arn": "arn:aws:ec2:us-west-1:308711700336:instance/i-0a61ba28c1d80a604",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a61ba28c1d80a604",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02da9cc76983fffd9",
            "private_dns": "ip-192-168-1-251.us-west-1.compute.internal",
            "private_ip": "192.168.1.251",
            "public_ip": "54.67.118.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a97d3a2a19d6c0bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061e1ca80f1a168e7",
            "tags": {
              "Name": "staging-Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090ddd6bab21e16a3"
            ]
          },
          "depends_on": [
            "aws_security_group.Allowssh",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:internet-gateway/igw-06b015e3328cb22af",
            "id": "igw-06b015e3328cb22af",
            "owner_id": "308711700336",
            "vpc_id": "vpc-09e54e5c7fded5ae8"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:route-table/rtb-0e070727cf7706014",
            "id": "rtb-0e070727cf7706014",
            "owner_id": "308711700336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b015e3328cb22af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09e54e5c7fded5ae8"
          },
          "depends_on": [
            "aws_internet_gateway.myigw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subn1myrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5132f2fa704c50d",
            "route_table_id": "rtb-0e070727cf7706014",
            "subnet_id": "subnet-061e1ca80f1a168e7"
          },
          "depends_on": [
            "aws_route_table.myrt",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allowssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:security-group/sg-090ddd6bab21e16a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090ddd6bab21e16a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220226123032413900000001",
            "name_prefix": "terraform-",
            "owner_id": "308711700336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09e54e5c7fded5ae8"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:subnet/subnet-061e1ca80f1a168e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-061e1ca80f1a168e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "308711700336",
            "tags": {
              "Name": "staging-subnet"
            },
            "tags_all": {
              "Name": "staging-subnet"
            },
            "vpc_id": "vpc-09e54e5c7fded5ae8"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:vpc/vpc-09e54e5c7fded5ae8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0934d9093ee28ae3d",
            "default_route_table_id": "rtb-03e55437d37572471",
            "default_security_group_id": "sg-02bf5c29b430548fd",
            "dhcp_options_id": "dopt-2ebb6c48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e54e5c7fded5ae8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e55437d37572471",
            "owner_id": "308711700336",
            "tags": {
              "Name": "staging-vnet"
            },
            "tags_all": {
              "Name": "staging-vnet"
            }
          }
        }
      ]
    }
  ]
}